move the Brushot-Bold.otf font file to resources folder

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 
 @font-face {
   font-family: myFirstFont;
-  src: url(Brushot-Bold.otf);
+  src: url(./resources/Brushot-Bold.otf);
   font-weight: bold;
 }
 
